--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+:root {
+    --white-color: #fff;
+    --green-color: green;
+    box-sizing: border-box;
+    --header-background-color: #f7fee7;
+}
+
 #content {
     margin: 0;
     padding: 0;
@@ -55,7 +62,7 @@
     background-color: green;
     text-align: center;
     color: #fff;
-    opacity: .9;
+    opacity: .5;
     cursor: pointer;
     font-weight: bold;
 }
@@ -82,6 +89,18 @@
     font-weight: bold;
 }
 
+.home-button:hover,
+.menu-button:hover,
+.contact-button:hover {
+    opacity: .7;
+}
+
+.home-button:active,
+.menu-button:active,
+.contact-button:active {
+    opacity: .5;
+}
+
 .home-body {
     width: 100%;
     height: 100%;
@@ -101,11 +120,136 @@
     top: 10rem;
     background-color: #000;
     opacity: .2;
+    z-index: 2;
 }
 
 .home-body-title {
+    font-family: system-ui;
     font-weight: bold;
-    color: #fff;
-    font-size: 4rem;
-    opacity: .9;
+    color: var(--white-color);
+    font-size: 3.5rem;
+    opacity: .4;
+    padding-top: 7rem;
+    text-align: center;
+}
+
+.order-button {
+    font-family: system-ui;
+    color: var(--white-color);
+    font-weight: bold;
+    font-size: 1.5rem;
+    background-color: var(--green-color);
+    padding: .8rem 2rem;
+    cursor: pointer;
+    border-radius: 2rem;
+    z-index: 5;
+}
+
+.order-button:hover {
+    background-color: #15803d;
+}
+
+.order-button:active {
+    opacity: .7;
+}
+
+.copy-right {
+    color: var(--white-color);
+    opacity: .4;
+    cursor: pointer;
+    padding-bottom: 1rem;
+    z-index: 5;
+}
+
+.copy-right a {
+    text-decoration: none;
+    color: var(--white-color);
+}
+
+.menu-body-container {
+    display: none;
+    /*  display: flex; */
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    margin: 2rem 8rem 4rem 8rem;
+}
+
+.card-container {
+    font-family: sans-serif;
+    font-weight: bold;
+    border: 2px solid #15803d;
+    padding: 2rem 1rem .5rem 1rem;
+    border-radius: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.card-text-container {
+    color: #15803d;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.card-container:active {
+    border: 6px;
+}
+
+.card-container:hover {
+    opacity: .8;
+}
+
+.contact-body-container {
+    height: 100vh;
+    background-color: #15803d;
+    color: white;
+    margin: 2rem 4rem;
+    padding: 0 2rem;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 6rem;
+}
+
+.location-container {
+    background-color: var(--header-background-color);
+    width: 12rem;
+    height: 8rem;
+    border-radius: 3rem;
+    color: green;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    z-index: 2;
+    font-size: 1rem;
+}
+
+.contacts {
+    font-weight: bold;
+    text-align: center;
+}
+
+.footer {
+    height: 1rem;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    background-color: green;
+    opacity: .6;
+    color: white;
+    text-align: center;
+    font-size: .6rem;
 }
